increased z-index of image-view component to fix bug where it was showing under thumbnails in ms edge

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@
   position: absolute;
   left: 0px;
   top: 0px;
-  z-index: 2;
+  z-index: 100;
   padding: 10px;
 }
 
